tests/ui/never_type/issue-51506.stderr
error[E0277]: `!` is not an iterator
  --> $DIR/issue-51506.rs:13:24
   |
LL |     default type Out = !;
   |                        ^ `!` is not an iterator
   |
   = help: the trait `Iterator` is not implemented for `!`
note: required by a bound in `Trait::Out`
  --> $DIR/issue-51506.rs:7:15
   |
LL |     type Out: Iterator<Item = u32>;
   |               ^^^^^^^^^^^^^^^^^^^^ required by this bound in `Trait::Out`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
